# wsjt-z_macos_port

./: .gitignore  CMakeLists.txt  Configuration.cpp  Configuration.hpp  Configuration.ui  README.md  WSJTXLogging.cpp  changelog.txt  compile-macos.sh  getfile.cpp  main.cpp  revision_utils.cpp  wsjtx_config.h.in  wsjtz_log_config.ini
Decoder/: decodedtext.cpp  decodedtext.h
Modulator/: Modulator.cpp
Network/: MessageClient.cpp  MessageClient.hpp  NetworkMessage.hpp
Transceiver/: TCITransceiver.cpp  TCITransceiver.hpp  TransceiverBase.cpp
UDPExamples/: MessageServer.cpp  MessageServer.hpp  control_WSJT-UDP.py  decode_WSJT-UDP.py
bundle_fixup/: CMakeLists.txt
doc/: build-linux.sh  build-osx.sh
example_log_configurations/: wsjtz_log_config.ini.rig_control  wsjtz_log_config.ini.simple_verbose
lib/ft8var/: ft8_decodevar.f90
lib/qra/q65/: q65.c  q65test.c
lib/qra/qracodes/: main.c
widgets/: mainwindow.cpp  mainwindow.h  mainwindow.ui  plotter.cpp  signalmeter.cpp  signalmeter.h
